--- a/style.css
+++ b/style.css
@@ -26,6 +26,9 @@ body{
 }
 .top-intro>h1{
     font-size: 3rem;
+    position: sticky;
+    top: 0; /* Stick to the top of the container */
+  z-index: 100;
 }
 .login-form{
     border-top-right-radius: 60px;
